# playwright-mcp-databricks

./: .gitignore  EXAMPLE_DEPLOYMENT.md  MIGRATION_GUIDE.md  README.md  README_DATABRICKS.md  SUMMARY.md  USAGE_GUIDE.md  app.yaml  databricks.yml  pyproject.toml  requirements.txt  test_package.py  verify_deployment.py
hooks/: apps_build.py
src/playwright_mcp_databricks/: __init__.py  app.py  main.py
src/playwright_mcp_databricks/static/: index.html
