[project]
name = "playwright-mcp-databricks"
version = "0.0.43"
description = "Playwright MCP Server for Databricks Apps"
readme = "README.md"
authors = [
    { name = "Microsoft Corporation" }
]
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.115.12",
    "mcp[cli]>=1.10.0",
    "uvicorn>=0.34.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
]

[tool.hatch.build.hooks.custom]
path = "hooks/apps_build.py"

[project.scripts]
playwright-mcp-server = "playwright_mcp_databricks.main:main"
